// 使用protobuf版本3
syntax = "proto3";

// 生成的go文件处于哪个目录哪个包下 ./代表仅在当前目录下生成 users代表了生成的go文件的包名
option go_package = "grpc-demo/hello-server/proto;users";

import "grpc-demo/hello-client/proto/hello.proto";

// proto文件中的包名
package users;

service SayHello {
  // rpc 方法名(请求参数) returns (返回参数)
  rpc SayHello(HelloRequest2) returns (HelloResponse2) {}
  rpc SayHello2(demoClient.HelloRequest) returns (demoClient.HelloResponse) {}
}



message HelloRequest2 {
  string requestName = 1;
}

message HelloResponse2 {
  string responseMsg = 1;
}